Closed
Bug 145291
Opened 23 years ago
Closed 23 years ago
Microsoft Word attachments don't appear for recipient
Categories
(MailNews Core :: Attachments, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: david, Assigned: bugzilla)
References
Details
(Keywords: dataloss, platform-parity, regression, Whiteboard: [adt2 rtm] [ETA 06/27])
Attachments
(2 files)
167.06 KB,
text/plain
|
Details | |
1.58 KB,
patch
|
cavin
:
review+
Bienvenu
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
When a MacOS X client composes email with two Word attachments, the recipient
does not see any attachments at all when the message is read. The attaching
client creates an "appledouble" attachment which contains the two attached
files, each of which is of type "application/binary."
Even after naming the files to attach with a .doc extension, associating it with
the "application/msword" MIME type,and configuring both the sender and recipient
to use Word to handle .doc types the recipient does not see any attachments at all.
We have seen this with 0.9.9 milestone, RC1 and RC2 on Mac OS X.
![]() |
||
Comment 1•23 years ago
|
||
Could you attach the source of the email in question to this bug using
http://bugzilla.mozilla.org/attachment.cgi?bugid=145291&action=enter ?
Reporter | ||
Comment 2•23 years ago
|
||
This sample of a message whose attachments Mozilla on OS X could not read is
attached per a request by bzbarsky@mit.edu.
![]() |
||
Updated•23 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
![]() |
||
Comment 3•23 years ago
|
||
Mail from David:
I see I didn't specify that the inability to see the attachments is only
when the recipient is on a Mac OS X system. Windows users see the
attachments just fine. The bug is when sender and recipient are on Mac
OS X. We are not testing on OS 9 or less.
Adding pp keyword...
Keywords: pp
Assignee | ||
Comment 4•23 years ago
|
||
reassign to myself.
Assignee: mscott → ducarroz
Target Milestone: --- → mozilla1.0.1
Assignee | ||
Comment 5•23 years ago
|
||
Works fine for me using Netscape 7.0PR1 on Mac OSX, I am reading the test
message from a pop account and both attachment are showing up. I can open those
attachments without trouble.
Reporter, are you using pop or imap?
Status: NEW → ASSIGNED
Assignee | ||
Comment 6•23 years ago
|
||
I am able to reproduce this problem on IMAP, looks like the IMAP protocole
doesn't correctly feed the appledouble part to mime!
The current workaround is to move/copy the message to a local folder, from there
you will be able to see the attachment.
This is a dataloss as the user cannot see the attachmens and probably isn't even
award of it. Nominating nsbeta1
Comment 7•23 years ago
|
||
marking nsbeta1+ [adt2 rtm] per mail triage.
Assignee | ||
Comment 8•23 years ago
|
||
The problem does not occurs if you send only one apple double attachment. But it
would appends if you send one MSWord attachment and signed the message (which
generate an extra part at the end of the message).
Assignee | ||
Comment 9•23 years ago
|
||
Here is the problem:
In mimemoz2.cpp, function BuildAttachmentList, we check is an appledouble
multipart has 2 children before accepting it. We do that to rule out potential
bogus appledouble attachment.
In nsIMAPBodyShell.cpp, function nsIMAPBodypartMultipart::ShouldFetchInline, we
accept to generate appledouble content only if the datafork of the attachment
can be displayed inline. This is Mac only. This code is trigger only when doing
part on demand.
Therefore, when we have a message big enough (case with 2 attachments but not
with only one), IMAP will do part on demand and not generate the content of the
appledouble part. Therefore mime wont be able to see it's children and will rule
out it's an invalid attachment and ignore it.
The easy way to fix it would be to remove the test for children in mime or at
least when we detect we are processing a truncated imap message. That would work
most of the time but it's possible (and I have seen) that the header of the
multipart/appledouble body does not contains the name of the attachment (which
is in one of the children) and therefore we won't be able to correctly named the
attachment in the message display!
The real solution would be to fix the IMAP code to not truncated the whole
appledouble part content but rather the content of its both children.
Assignee | ||
Updated•23 years ago
|
Whiteboard: [adt2 rtm] → [adt2 rtm], have fix
Assignee | ||
Comment 10•23 years ago
|
||
I have removed the optimization in IMAP which was preventing to generated the
children headers of a multipart/appledouble attachment when doing part on
demande. Now, we cut only the content of the children (if they cannot be
displayed inline). This is what we are already doing on other platforms. I have
tested the patch carrefully with several case of appledouble attachments
(inline or not).
Comment 11•23 years ago
|
||
Comment on attachment 87994 [details] [diff] [review]
Proposed fix, v1
sr=bienvenu
Attachment #87994 -
Flags: superreview+
Comment 12•23 years ago
|
||
Comment on attachment 87994 [details] [diff] [review]
Proposed fix, v1
r=cavin.
Attachment #87994 -
Flags: review+
Assignee | ||
Comment 13•23 years ago
|
||
Fixed in trunk.
This is a safe fix we should really take for the branch
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [adt2 rtm], have fix → [adt2 rtm]
Comment 14•23 years ago
|
||
Trix, could you verify this on the trunk?
Comment 15•23 years ago
|
||
What mail client generated this email? Will most email clients generate a mail
with 2 attachments such that this problem won't occur?
Assignee | ||
Comment 16•23 years ago
|
||
Scott, the problem occurs when we have message with an apple double attachment
and the message is big enouh to force IMAP do to part on demand. This is not
related to any particular mail client.
Comment 17•23 years ago
|
||
Adding adt1.0.1+ on behalf of the adt for checkin to the 1.0 branch. Please get
drivers approval before checking in. When you check this into the branch, please
change the mozilla1.0.1+ keyword to fixed1.0.1
Updated•23 years ago
|
Attachment #87994 -
Flags: approval+
Comment 18•23 years ago
|
||
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Keywords: mozilla1.0.1 → mozilla1.0.1+
Comment 20•23 years ago
|
||
verified on branch 2002071005-1.0, changing keyword to verified1.0.1
Status: RESOLVED → VERIFIED
Keywords: fixed1.0.1 → verified1.0.1
Updated•20 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•